--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Metronic | Dashboard
+			Blip | Dashboard
 		</title>
 		<base href="/">
 		<meta name="description" content="Latest updates and statistic charts">
